--- a/OneDayTicket/Base.lproj/Main.storyboard
+++ b/OneDayTicket/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8OX-a4-HXS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                <rect key="frame" x="0.0" y="-6" width="414" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ulo-xc-hTq">
                                         <rect key="frame" x="5" y="45" width="50" height="50"/>
@@ -130,7 +130,7 @@
                                 </constraints>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="account" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H2X-ic-u8a">
-                                <rect key="frame" x="150" y="240.5" width="200" height="40"/>
+                                <rect key="frame" x="150" y="234.5" width="200" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="bGM-Ka-aSc"/>
@@ -152,7 +152,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JBc-7y-9zK">
-                                <rect key="frame" x="150" y="297.5" width="200" height="40"/>
+                                <rect key="frame" x="150" y="291.5" width="200" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Bm6-yf-TUs"/>
@@ -174,7 +174,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="帳號" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oJJ-mO-0mY">
-                                <rect key="frame" x="20" y="250" width="110" height="21"/>
+                                <rect key="frame" x="20" y="244" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="DZ6-Cb-3fS"/>
                                 </constraints>
@@ -183,7 +183,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="註冊信箱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSf-Ei-xTz">
-                                <rect key="frame" x="20" y="307" width="110" height="21"/>
+                                <rect key="frame" x="20" y="301" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="BHt-hh-nQA"/>
                                 </constraints>
@@ -192,7 +192,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZY-BD-NlS">
-                                <rect key="frame" x="147" y="387.5" width="120" height="50"/>
+                                <rect key="frame" x="147" y="381.5" width="120" height="50"/>
                                 <color key="backgroundColor" systemColor="tintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="Vx7-FT-wKq"/>
@@ -220,7 +220,7 @@
                             <constraint firstItem="H2X-ic-u8a" firstAttribute="centerY" secondItem="oJJ-mO-0mY" secondAttribute="centerY" id="7Yl-3C-OGA"/>
                             <constraint firstItem="8OX-a4-HXS" firstAttribute="leading" secondItem="Xy6-pQ-KnX" secondAttribute="leading" id="8mc-5i-qiu"/>
                             <constraint firstItem="zZY-BD-NlS" firstAttribute="top" secondItem="JBc-7y-9zK" secondAttribute="bottom" constant="50" id="AMT-eH-xqz"/>
-                            <constraint firstItem="Xy6-pQ-KnX" firstAttribute="top" secondItem="8OX-a4-HXS" secondAttribute="top" constant="44" id="FV8-lV-r69"/>
+                            <constraint firstItem="Xy6-pQ-KnX" firstAttribute="top" secondItem="8OX-a4-HXS" secondAttribute="top" constant="50" id="FV8-lV-r69"/>
                             <constraint firstItem="H2X-ic-u8a" firstAttribute="leading" secondItem="oJJ-mO-0mY" secondAttribute="trailing" constant="20" id="G53-JX-Usw"/>
                             <constraint firstItem="JBc-7y-9zK" firstAttribute="top" secondItem="H2X-ic-u8a" secondAttribute="bottom" constant="17" id="Lzy-OD-Z7v"/>
                             <constraint firstItem="HSf-Ei-xTz" firstAttribute="top" secondItem="oJJ-mO-0mY" secondAttribute="bottom" constant="36" id="c5O-S8-BAc"/>
@@ -234,7 +234,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="accountTextField" destination="H2X-ic-u8a" id="csB-ZR-ueT"/>
                         <outlet property="backButton" destination="Ulo-xc-hTq" id="bWj-B3-P2a"/>
+                        <outlet property="emailTextField" destination="JBc-7y-9zK" id="iDN-Zx-3qp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="upc-22-bmb" sceneMemberID="firstResponder"/>
@@ -630,7 +632,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JlO-gE-dre">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                <rect key="frame" x="0.0" y="-6" width="414" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7h1-Bp-eK0">
                                         <rect key="frame" x="5" y="45" width="50" height="50"/>
@@ -660,7 +662,7 @@
                                 </constraints>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="account" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NgN-pl-QqK">
-                                <rect key="frame" x="150" y="240.5" width="200" height="40"/>
+                                <rect key="frame" x="150" y="234.5" width="200" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kdX-fL-wpx"/>
@@ -682,7 +684,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vzc-gj-jlq">
-                                <rect key="frame" x="150" y="297.5" width="200" height="40"/>
+                                <rect key="frame" x="150" y="291.5" width="200" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="DbS-mj-yW0"/>
@@ -704,7 +706,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="驗證碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6e-Cw-88g">
-                                <rect key="frame" x="20" y="250" width="110" height="21"/>
+                                <rect key="frame" x="20" y="244" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="PbY-w2-Wky"/>
                                 </constraints>
@@ -713,7 +715,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新密碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhu-Tq-XBs">
-                                <rect key="frame" x="20" y="307" width="110" height="21"/>
+                                <rect key="frame" x="20" y="301" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="kGe-iO-wlY"/>
                                 </constraints>
@@ -722,7 +724,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D9h-tF-xKU">
-                                <rect key="frame" x="150" y="354.5" width="200" height="40"/>
+                                <rect key="frame" x="150" y="348.5" width="200" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="QDs-Hw-E54"/>
@@ -744,7 +746,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="再次輸入密碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMU-Mp-7aB">
-                                <rect key="frame" x="20" y="364" width="110" height="21"/>
+                                <rect key="frame" x="20" y="358" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="1GJ-UO-bED"/>
                                 </constraints>
@@ -753,7 +755,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OGi-qC-k9q">
-                                <rect key="frame" x="147" y="434.5" width="120" height="50"/>
+                                <rect key="frame" x="147" y="428.5" width="120" height="50"/>
                                 <color key="backgroundColor" systemColor="tintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="YhN-Wf-BtL"/>
@@ -761,7 +763,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="tintColor" red="0.0039215686269999999" green="0.5568627451" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="送出">
+                                <state key="normal" title="修改">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -782,7 +784,7 @@
                             <constraint firstItem="OGi-qC-k9q" firstAttribute="top" secondItem="D9h-tF-xKU" secondAttribute="bottom" constant="40" id="Lu7-ot-IuX"/>
                             <constraint firstItem="IMU-Mp-7aB" firstAttribute="top" secondItem="fhu-Tq-XBs" secondAttribute="bottom" constant="36" id="OvA-dB-tmt"/>
                             <constraint firstItem="C6e-Cw-88g" firstAttribute="top" secondItem="JlO-gE-dre" secondAttribute="bottom" constant="150" id="Sag-w1-R1M"/>
-                            <constraint firstItem="k2e-HN-4em" firstAttribute="top" secondItem="JlO-gE-dre" secondAttribute="top" constant="44" id="WIF-8w-AsI"/>
+                            <constraint firstItem="k2e-HN-4em" firstAttribute="top" secondItem="JlO-gE-dre" secondAttribute="top" constant="50" id="WIF-8w-AsI"/>
                             <constraint firstItem="fhu-Tq-XBs" firstAttribute="leading" secondItem="C6e-Cw-88g" secondAttribute="leading" id="WR5-Ya-vpn"/>
                             <constraint firstItem="k2e-HN-4em" firstAttribute="trailing" secondItem="NgN-pl-QqK" secondAttribute="trailing" constant="64" id="WkE-iO-r8o"/>
                             <constraint firstItem="k2e-HN-4em" firstAttribute="trailing" secondItem="D9h-tF-xKU" secondAttribute="trailing" constant="64" id="XO5-za-rxz"/>
@@ -806,21 +808,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kw-If-KPf" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="688" y="757"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="woe-WC-vqt">
-            <objects>
-                <viewController id="gp1-Vi-Dzs" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="eo4-mh-hbw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="JBd-Ln-6oB"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eMp-au-tSk" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1461" y="757"/>
         </scene>
     </scenes>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
