--- a/OneDayTicket/Base.lproj/Main.storyboard
+++ b/OneDayTicket/Base.lproj/Main.storyboard
@@ -453,6 +453,7 @@
             <objects>
                 <tabBarController storyboardIdentifier="MainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2xy-Zf-hnm" customClass="MainViewController" customModule="onedayticket_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="zxh-ef-Jdj">
+                        <nil key="title"/>
                         <leftBarButtonItems>
                             <barButtonItem title="Item" id="Byb-hR-3dP"/>
                             <barButtonItem title="Item" landscapeImage="fb_icon" id="dFd-aa-JaA"/>
@@ -471,7 +472,7 @@
                         <color key="selectedImageTintColor" red="0.0" green="0.37647058820000001" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <tabBarAppearance key="standardAppearance" backgroundEffect="regular" stackedItemPositioning="fill">
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="shadowColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                             <tabBarItemAppearance key="stackedLayoutAppearance">
                                 <tabBarItemStateAppearance key="normal">
                                     <textAttributes key="titleTextAttributes">
